# pkg/pb/repository/v1/repository.pb.validate.go
@@ -2012,6 +2012,8 @@ func (m *ForkRepositoryRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
+	// no validation rules for Visibility
+
 	if len(errors) > 0 {
 		return ForkRepositoryRequestMultiError(errors)
 	}
